[package]
name = "user_manage_micro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies]
actix = "0.11.0"
actix-web = "4"
dotenv = "0.15.0"
diesel = { version = "1.4.10", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.9.0"
[dependencies]
actix-rt = "2.5"
actix-service = "2.0"